se agregaron los ultimos detalles

--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -11,13 +11,13 @@ $naranja: #ff7a01;
 $naranjaC: #fee4cb;
 $cafe: #987c64;
 
-$blanco: #FFFFFF;
+$blanco: #ffffff;
 $gris: #e2e2e2;
 
 $separacion: 5rem;
 
 // Fuentes
 $delgada: 300;
-$regular : 400;
+$regular: 400;
 $bold: 700;
-$black: 900
+$black: 900;
